# insect_robot

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  Makefile  README.md  ToolChain.cmake  calibration.c  creep.gait  full.gait  install_dependencies.sh  movement.c  movement.h  program.c  reset.c  robot_calibration_values.csv  servo_controller.c  servo_controller.h  sit_down.gait  spi.c  spi_test.c  stand_up.c  stand_up.gait  test.gait  transition.gait
cmake/: macros.cmake
src/: CMakeLists.txt  angle_test.c  leg_control.c  stand_up.c
src/leg_control/: CMakeLists.txt
src/leg_control/include/: leg_control.h
src/libraries/: CMakeLists.txt
src/libraries/include/: kinematics.h  leg_control.h  servo_controller.h
src/libraries/kinematics/: CMakeLists.txt
src/libraries/kinematics/include/: kinematics.h  robot_parameters.h
src/libraries/kinematics/src/: kinematics.c
src/libraries/leg_control/: CMakeLists.txt
src/libraries/leg_control/include/: leg_control.h
src/libraries/servo_controller/: CMakeLists.txt
src/libraries/src/: kinematics.c  leg_control.c  servo_controller.c
src/servo_controller/: CMakeLists.txt
src/test_apps/: CMakeLists.txt
src/test_apps/src/: interpolation.c  inv_kin_test.c  posn_to_pose.c  process_gait.c  reset.c  sit_down.c  test_kinematics.c
src/test_binaries/src/: calibration.c
